[package]
name = "lotide"
version = "0.13.0-dev"
authors = ["Colin Reeder <colin@vpzom.click>"]
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["types"]

[dependencies]
hyper = { version = "0.14.9", features = ["stream", "client", "tcp", "http1", "server"] }
hyper-tls = "0.5.0"
tokio-postgres = { version = "0.7.2", features = ["with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
tokio = { version = "1.8.0", features = ["macros", "sync", "fs", "time", "rt-multi-thread"] }
trout = "0.4.0"
deadpool-postgres = "0.7.0"
serde_json = "1.0.53"
futures = "0.3.5"
bcrypt = "0.8.0"
serde_derive = "1.0.111"
serde = "1.0.111"
uuid = { version = "0.8.1", features = ["v4"] }
headers = "0.3.2"
chrono = "0.4.11"
url = { version = "2.1.1", features = ["serde"] }
either = "1.5.3"
openssl = "0.10.29"
hancock = "0.1.0"
serde_urlencoded = "0.6.1"
mime = "0.3.16"
thiserror = "1.0.20"
async-trait = "0.1.36"
postgres-types = "0.2.1"
lazy_static = "1.4.0"
unic-char-range = "0.9.0"
http = "0.2.1"
fluent = "0.12.0"
fluent-langneg = "0.13.0"
unic-langid = { version = "0.9.0", features = ["macros"] }
activitystreams = "=0.7.0-alpha.11"
activitystreams-ext = "0.1.0-alpha.2"
fast_chemail = "0.9.6"
lettre = { version = "0.10.0-rc.3", features = ["tokio1", "tokio1-native-tls"] }
rand = "0.7.3"
bs58 = "0.3.1"
bumpalo = "3.4.0"
tokio-util = { version = "0.6.7", features = ["codec"] }
henry = "0.2.0"
ammonia = "3.1.0"
base64 = "0.13.0"
pulldown-cmark = "0.8.0"
migrant_lib = { version = "0.33.0", features = ["d-postgres"] }
pdcm-linkify = "0.1.0"
log = "0.4"
env_logger = "0.8"
v_htmlescape = "0.14.1"
config = { version = "0.11.0", default-features = false, features = ["ini"] }
clap = "3.1.2"
bytes = "1.0.1"
atom_syndication = "0.11.0"
lotide_types = { path = "./types" }
date_duration = "0.1.0"
web-push = "0.9.1"
sha2 = "0.10.2"
rusoto_s3 = "0.48.0"
rusoto_core = "0.48.0"
rusoto_credential = "0.48.0"
postgres-native-tls = "0.5.0"
native-tls = "0.2.11"

[dev-dependencies]
rand = "0.7.3"
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
percent-encoding = "2.1.0"
rstest = "0.12.0"

[build-dependencies]
fluent-syntax = "0.11.0"

[patch.crates-io]
activitystreams = { git = "https://git.sr.ht/~vpzom/activitystreams", rev = "e692dc" }
rusoto_credential = { git = "https://github.com/vpzomtrrfrt/rusoto", branch = "box-credential" }
