[package]
name = "lotide_types"
version = "0.0.0-pre"
authors = ["Colin Reeder <colin@vpzom.click>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.53"
serde_derive = "1.0.111"
serde = "1.0.111"
postgres-types = "0.2.1"
bytes = "1.0.1"
